--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mockjs": "^1.1.0",
